syntax = "proto3";

message TagStep {
    repeated TagStep.Type value = 1;
    message Type {
        requireddouble exclusiveMinimum = 1;
        requireddouble minimum = 2;
        requireddouble range = 3;
        requireddouble multipleOf = 4;
    }
}